--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,11 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:3.0.2'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+    implementation 'io.reactivex.rxjava2:rxjava:3.1.5'
     implementation 'net.sourceforge.streamsupport:streamsupport:1.5.3'
     testImplementation 'junit:junit:4.12'
 //    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
